# Classic-ABC-IME

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  Makefile.release  README.md  README_ZH.md  REFACTOR_TUI_SHELL.md  abcime.props  abcime.sln  build.bat  detail.md  env.bat
data/: char_freq.txt  emoji.txt  pinyin_map.txt  user_dict.txt
src/: candidate_item.cpp  candidate_item.h  ime_controller.cpp  ime_controller.h  pinyin_composition.cpp  pinyin_composition.h  pinyin_data.cpp  pinyin_data.h  pinyin_file_io.cpp  pinyin_file_io.h  pinyin_matcher.cpp  pinyin_matcher.h  pinyin_split.cpp  pinyin_split.h  pinyin_virtual_cursor.cpp  pinyin_virtual_cursor.h  status_bar.cpp  status_bar.h  tui_shell.cpp  tui_shell.h  util.cpp  util.h  word_matcher.cpp  word_matcher.h
src/vterm/: ansi_parser.h  color.h  rendering.h  screen.h  shell_api.h  term_width.h  utf8.h  virtual_shell.cpp
src/win/: abcime.props  abcime.sln  build.bat  env.bat  install_proto.cpp  proto.cpp  proto_core.cpp  proto_core.h  proto_engine.cpp  proto_engine.h  proto_ui.cpp  proto_ui.h  uninstall_proto.cpp
src/win/IME/: IME.def  IME.h  IME.rc  IME.vcxproj  IMEimpl.cpp  dllmain.cpp  ime.cpp  immdev.h  resource.h  stdafx.cpp  stdafx.h
src/win/TSF/: Compartment.cpp  Globals.cpp  Globals.h  KeyEventSink.cpp  Register.cpp  Server.cpp  TSF.cpp  TSF.h  TSF.rc  TSF.vcxproj  TextEditSink.cpp  ThreadMgrEventSink.cpp  dllmain.cpp  stdafx.cpp  stdafx.h
src/win/include/: ImeUtility.h  KeyEvent.h  resource.h
